# crop-disease-detection

./: Dockerfile  README.md  agents.py  app.py  baseline.py  env.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
server/: app.py
