[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "crop-disease-detection"
version = "1.0.0"
description = "Crop Disease Detection & Treatment Agent - OpenEnv Environment"
requires-python = ">=3.10"
dependencies = [
    "openenv-core @ git+https://github.com/meta-pytorch/OpenEnv.git",
    "gradio",
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "openai",
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = ["pytest"]
